# ai-architect-v2

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
docs/: course-code-map.md  course-outline.md  event-driven-ai-systems.md  final-agent-spec.md
docs/ai-system-architecture-patterns/: design.md
docs/policies/: README.md  account-policy.md  opening-hours.md  privacy-policy.md  refund-policy.md  shipping-policy.md  warranty-policy.md
docs/resources/: deploy-with-codex-prompt.md
examples/: .env.sample  01_basic_model_call.py  02_structured_outputs.py  03_deterministic_workflow.py  04_agent_by_hand.py  05_first_adk_agent.py  05_first_framework_agent.py  06a_file_rag.py  06b_sql_rag.py  07a_vector_rag.py  07b_hybrid_rag.py
remotion-chart/: README.md  package-lock.json  package.json
remotion-chart/src/: Composition.tsx  Root.tsx
sql/: 001_support_document_registry.sql
support_agent/: __init__.py  agent_by_hand.py  domain.py  knowledge.py  model_client.py  workflow.py
support_agent_app/: .env.sample  README.md  __init__.py  agent.py  api.py  config.py  ingest_policies.py  main.py
support_agent_app/agents/: __init__.py  support_agent.py
support_agent_app/integrations/: __init__.py  postgres.py
support_agent_app/services/: __init__.py  document_registry.py  labels.py  policy_ingestion.py  support_processor.py
tests/: test_examples.py
