[project]
name = "ai-architect-v2"
version = "0.1.0"
description = "Public code companion for the AI Architect course."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
adk = ["google-adk", "litellm"]
cloud = [
  "google-cloud-pubsub",
  "google-api-python-client",
  "google-auth",
  "opentelemetry-api",
  "opentelemetry-sdk",
]

[tool.ruff]
line-length = 100

